# MyFood_compute

./: .gitignore  MyFood.py  README.md  create_database.py  flask_predict.py  handle_requests.py  main.py  maingui.py  myfood_sql.py  pyproject.toml  url.py  user_info.py
myfood_compute/api/: main.py
myfood_compute/api/bo/: food_bo.py  image_bo.py  user_history_bo.py
myfood_compute/api/dao/: base.py  food_dao.py  user_dao.py
myfood_compute/api/endpoint/: food_endpoint.py  image_endpoint.py  user_histort_endpoint.py
myfood_compute/api/schema/: food_schema.py  user_schema.py
myfood_compute/config/: env_setting.py
myfood_compute/frontend/handles/: bo.py  handle_requests.py  user_info.py
myfood_compute/frontend/ui/: qt_ui.py
myfood_compute/utils/: tools.py
